--- a/all-page/contact.html
+++ b/all-page/contact.html
@@ -115,7 +115,7 @@
                         <label>Message</label>
                         <div class="input-group mb-2 mb-sm-0">
                             <div class="input-group-addon"><i class="fas fa-envelope-open icon-bg"></i> &nbsp;</div>
-                            <textarea class="form-control" placeholder="Message">></textarea>
+                            <textarea class="form-control" placeholder="Message"></textarea>
                         </div>
                     </div>
 
